--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ quarkus.sqs.aws.credentials.type=static
 quarkus.sqs.aws.credentials.static-provider.access-key-id=localstack
 quarkus.sqs.aws.credentials.static-provider.secret-access-key=localstack
 app.aws.sqs.queue.url=http://localhost:4566/000000000000/aws-example-queue
+quarkus.dynamodb.endpoint-override=http://localhost:4566
+quarkus.dynamodb.aws.region=us-east-1
+quarkus.dynamodb.aws.credentials.type=static
+quarkus.dynamodb.aws.credentials.static-provider.access-key-id=localstack
+quarkus.dynamodb.aws.credentials.static-provider.secret-access-key=localstack
