--- a/localstack/docker-compose.yml
+++ b/localstack/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - AWS_DEFAULT_REGION=us-east-1
       - EDGE_PORT=4566
-      - SERVICES=sqs
+      - SERVICES=sqs,dynamodb
     ports:
       - '4566:4566'
     volumes:
