Add upload and download with AWS s3

--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-resteasy-reactive'
     implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
-    implementation 'io.quarkus:quarkus-mutiny'
     implementation 'io.quarkus:quarkus-amazon-sqs'
     implementation 'io.quarkus:quarkus-amazon-dynamodb'
+    implementation 'io.quarkus:quarkus-amazon-s3'
     implementation 'software.amazon.awssdk:url-connection-client'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'org.jboss.logging:jboss-logging'
