--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ quarkus.dynamodb.aws.region=us-east-1
 quarkus.dynamodb.aws.credentials.type=static
 quarkus.dynamodb.aws.credentials.static-provider.access-key-id=localstack
 quarkus.dynamodb.aws.credentials.static-provider.secret-access-key=localstack
+quarkus.s3.endpoint-override=http://localhost:4566
+quarkus.s3.aws.region=us-east-1
+quarkus.s3.aws.credentials.type=static
+quarkus.s3.aws.credentials.static-provider.access-key-id=localstack
+quarkus.s3.aws.credentials.static-provider.secret-access-key=localstack
+app.aws.s3.bucket.name=my-bucket
